# tensorflow

tensorflow/lite/: CMakeLists.txt
tensorflow/lite/delegates/gpu/: CMakeLists.txt
tensorflow/lite/delegates/gpu/metal/: CMakeLists.txt
tensorflow/lite/tools/cmake/modules/ruy/: CMakeLists.txt
